update and fix contacts

--- a/contacts.html
+++ b/contacts.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <div class="panel">
-        <span>Contact with me</span>
+        <span class="title">Contact with me</span>
+        <a class="home">Home</a>
+        <a class="aboutme">About me</a>
+        <a class="works">My works</a>
     </div>
-    <div>
         <div class="idk">
             <div class="block">
                 <img class="avatar" src="https://cdn.discordapp.com/avatars/328901168447225867/a_eb6eeb4dccb9cc20c939c87250335ea5.gif?size=128">
@@ -29,7 +31,7 @@
                         <br>
                         js, CSS
                     </div>
-                    <div class="margin-left">
+                    <div class="links margin-left">
                         <i class="fa-solid fa-file"></i> Projects
                         <br>
                         <a href="https://senpaal.me/">Portfolio</a>
@@ -44,10 +46,36 @@
                         <span>Let's go on my discord server!</span>
                     </button>
             </div>
+            <div class="block2 big-margin-left">
+                <img class="avatarVK" src="img/avatarVK.jpg">
+                <span class="nick">никита</span>
+                <div class="phrase">I work in chill 🏖️</div>
+                <div class="info text center">
+                    <div>
+                        ⚧ Gender
+                        <br>
+                        boy
+                    </div>
+                    <div class="margin-left">
+                        <i class="fa-solid fa-code"></i> Languages
+                        <br>
+                        js, CSS
+                    </div>
+                    <div class="links margin-left">
+                        <i class="fa-solid fa-file"></i> Projects
+                        <br>
+                        <a href="https://senpaal.me/">Portfolio</a>
+                    </div>
+                </div>
+                <button onclick="window.open('https://vk.com/senpaall')">
+                    <i class="fa-brands fa-vk"></i>
+                    <span>Contact me</span>
+                </button>
+                <button class="button2" onclick="window.open('https://vk.com/senpaall')">
+                    <i class="fa-brands fa-vk"></i>
+                    <span>Contact me</span>
+                </button>
+            </div>
         </div>
-        <div>
-
-        </div>
-    </div>
 </body>
 </html>
