--- a/contacts.html
+++ b/contacts.html
@@ -11,9 +11,9 @@
 <body>
     <div class="panel">
         <span class="title">Contact with me</span>
-        <a class="home">Home</a>
-        <a class="aboutme">About me</a>
-        <a class="works">My works</a>
+        <a href="index.html" class="home">Home</a>
+        <a href="aboutme.html" class="aboutme">About me</a>
+        <a href="works.html" class="works">My works</a>
     </div>
         <div class="idk">
             <div class="block">
@@ -48,7 +48,7 @@
             </div>
             <div class="block2 big-margin-left">
                 <img class="avatarVK" src="img/avatarVK.jpg">
-                <span class="nick">никита</span>
+                <span class="nick">Никита</span>
                 <div class="phrase">I work in chill 🏖️</div>
                 <div class="info text center">
                     <div>
