--- a/works.html
+++ b/works.html
@@ -13,8 +13,7 @@
       <span class="titleMe">My works</span>
       <a href="/" class="home">Home</a>
       <a href="aboutme.html" class="aboutme">About me</a>
-      <a rel="stylesheet" href="contacts.html" class="animDs" target="_blank"> <i class="fa-brands fa-discord"></i> </a>
-      <a rel="stylesheet" href="https://vk.com/senpaall" class="animVK" target="_blank"> <i class="fa-brands fa-vk"></i> </a> 
+      <a rel="stylesheet" href="contacts.html" class="contact" target="_blank"> <i class="fa-solid fa-question"></i> </a>
     </div>
     <div class="content">
       <div class="text-center headline">Мои работы</div>
