--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
             <h1 class="titleMe">About me<h1>
             <a class="panelHome" href="/">Home</a>
             <a class="panelWorks" href="works.html">My works</a>
-            <a rel="stylesheet" href="contacts.html" class="contact" target="_blank"> <i class="fa-solid fa-question"></i> </a>
+            <a rel="stylesheet" href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
         </header>
         <div class="senpaal">
             <span class="title">Никита</span>
