--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
-    <title>CSS directory</title>
-    <meta charset="UTF-8">
     <meta name="description" content="Портфолио">
     <meta name="keywords" content="HTML,CSS,JavaScript,Портфолио">
     <meta name="author" content="Никита Абрамовский">
+    <title>CSS directory</title>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <a href="aboutme.html">About me</a>
-        <h1 class="title">CSS Development<h1>
-        <a href="works.html">My works</a>
-    </header>
+    <div class="panel">
+        <span class="title">Title</span>
+        <a class="aboutme" href="aboutme.html">About me</a>
+        <a class="myworks" href="works.html">My works</a>
+        <a href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
+    </div>
     <div class="main">
         <h1>Привет! <img style="height: 36px; width: 36px;" src="https://em-content.zobj.net/source/noto-emoji-animations/344/waving-hand_1f44b.gif" /></h1>
         <h2>Добро пожаловать в мой блог!</h2>
