--- a/aboutme.html
+++ b/aboutme.html
@@ -9,12 +9,13 @@
         <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header>
-            <h1 class="titleMe">About me<h1>
+        <div class="panel2">
+            <h1 class="titleMe">Portfolio</h1>
             <a class="panelHome" href="/">Home</a>
+            <a class="panelAboutme" href="aboutme.html">About me</a>
             <a class="panelWorks" href="works.html">My works</a>
             <a rel="stylesheet" href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
-        </header>
+        </div>
         <div class="senpaal">
             <span class="title">Никита</span>
             <div class="text">Я <a href="https://vk.com/senpaall" target="_blank">senpaal</a>, фронтендер с небольшим опытом, и страстью к кодированию.<br> Если меня 
