--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
 </head>
 <body>
     <div class="panel">
-        <span class="title">Title</span>
-        <a class="aboutme" href="aboutme.html">About me</a>
-        <a class="myworks" href="works.html">My works</a>
-        <a href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
+        <h1 class="titleMe">Portfolio</h1>
+        <a class="panelHome" href="/">Home</a>
+        <a class="panelAboutme" href="aboutme.html">About me</a>
+        <a class="panelWorks" href="works.html">My works</a>
+        <a rel="stylesheet" href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
     </div>
     <div class="main">
-        <h1>Привет! <img style="height: 36px; width: 36px;" src="https://em-content.zobj.net/source/noto-emoji-animations/344/waving-hand_1f44b.gif" /></h1>
+        <h1>
+            <img style="height: 36px; width: 36px;" src="https://em-content.zobj.net/source/noto-emoji-animations/344/waving-hand_1f44b.gif">
+            Привет!
+            <img style="height: 36px; width: 36px;" src="https://em-content.zobj.net/source/noto-emoji-animations/344/waving-hand_1f44b.gif">
+        </h1>
         <h2>Добро пожаловать в мой блог!</h2>
         <hd></hd>
         <h1>Что тут можно увидеть?</h1>
