--- a/contacts.html
+++ b/contacts.html
@@ -10,10 +10,11 @@
 </head>
 <body>
     <div class="panel">
-        <span class="title">Contact with me</span>
-        <a href="index.html" class="home">Home</a>
-        <a href="aboutme.html" class="aboutme">About me</a>
-        <a href="works.html" class="works">My works</a>
+        <h1 class="titleMe">Portfolio</h1>
+        <a class="panelHome" href="/">Home</a>
+        <a class="panelAboutme" href="aboutme.html">About me</a>
+        <a class="panelWorks" href="works.html">My works</a>
+        <a rel="stylesheet" href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
     </div>
         <div class="idk">
             <div class="block">
