--- a/works.html
+++ b/works.html
@@ -10,9 +10,10 @@
   </head>
   <body>
     <div class="panel">
-      <span class="titleMe">My works</span>
-      <a href="/" class="home">Home</a>
-      <a href="aboutme.html" class="aboutme">About me</a>
+      <h1 class="titleMe">Portfolio</h1>
+      <a class="panelHome" href="/">Home</a>
+      <a class="panelAboutme" href="aboutme.html">About me</a>
+      <a class="panelWorks" href="works.html">My works</a>
       <a rel="stylesheet" href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
     </div>
     <div class="content">
