--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My contact</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/contact.css">
     <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
 </head>
@@ -16,28 +19,12 @@
         <a class="panelWorks" href="works.html">My works</a>
         <a rel="stylesheet" href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
     </div>
+    <div class="idk2">
         <div class="idk">
             <div class="block">
                 <img class="avatar" src="https://cdn.discordapp.com/avatars/328901168447225867/a_eb6eeb4dccb9cc20c939c87250335ea5.gif?size=128">
                 <span class="nick">senpaal</span>
-                <div class="phrase">I work in chill 🏖️</div>
-                <div class="info text center">
-                    <div>
-                        ⚧ Gender
-                        <br>
-                        boy
-                    </div>
-                    <div class="margin-left">
-                        <i class="fa-solid fa-code"></i> Languages
-                        <br>
-                        js, CSS
-                    </div>
-                    <div class="links margin-left">
-                        <i class="fa-solid fa-file"></i> Projects
-                        <br>
-                        <a href="https://senpaal.me/">Portfolio</a>
-                    </div>
-                </div>
+                <div class="text">Discord</div>
                     <button onclick="window.open('https://discordapp.com/users/328901168447225867')">
                         <i class="fa-brands fa-discord"></i>
                         <span>Contact me</span>
@@ -50,33 +37,28 @@
             <div class="block2 big-margin-left">
                 <img class="avatarVK" src="img/avatarVK.jpg">
                 <span class="nick">Никита</span>
-                <div class="phrase">I work in chill 🏖️</div>
-                <div class="info text center">
-                    <div>
-                        ⚧ Gender
-                        <br>
-                        boy
-                    </div>
-                    <div class="margin-left">
-                        <i class="fa-solid fa-code"></i> Languages
-                        <br>
-                        js, CSS
-                    </div>
-                    <div class="links margin-left">
-                        <i class="fa-solid fa-file"></i> Projects
-                        <br>
-                        <a href="https://senpaal.me/">Portfolio</a>
-                    </div>
-                </div>
+                <div class="text">VK</div>
                 <button onclick="window.open('https://vk.com/senpaall')">
                     <i class="fa-brands fa-vk"></i>
                     <span>Contact me</span>
                 </button>
-                <button class="button2" onclick="window.open('https://vk.com/senpaall')">
-                    <i class="fa-brands fa-vk"></i>
-                    <span>Contact me</span>
+            </div>
+        <!-- </div>8
+        <div class="idk"> -->
+            <div class="block3">
+                <img class="avatarGH" src="img/avatarGH.jpg">
+                <span class="nick">senpaal</span>
+                <div class="text">GitHub</div>
+                <button class="button3" onclick="window.open('https://github.com/senpaal')">
+                    <i class="fa-brands fa-github"></i>
+                    <span>My profile</span>
+                </button>
+                <button class="button2" onclick="window.open('https://github.com/senpaal?tab=repositories')">
+                    <i class="fa-brands fa-github-alt"></i>
+                    <span>Repositories</span>
                 </button>
             </div>
         </div>
+    </div>
 </body>
 </html>
