add function chage language

--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
             <a class="panelWorks" href="works.html">My works</a>
             <a rel="stylesheet" href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
         </div>
-        <div class="senpaal">
+        <div class="lng-senpaal">
             <span class="title">Никита</span>
             <div class="text">Я <a href="https://vk.com/senpaall" target="_blank">senpaal</a>, фронтендер с небольшим опытом, и страстью к кодированию.<br> Если меня 
                                попросят сделать то, чего я не умею, то я научусь и сделаю это. Я спокойный <br>
@@ -26,8 +26,8 @@
             <div class="center">
                 <hd class="top-indent"></hd>
             </div>
-            </div>
-        <div class="skillsbg">
+        </div>
+        <div class="lng-skillsbg">
             <div>
              <span class="skills">Мои возможности</span> 
                 <div class="panel">
@@ -52,12 +52,12 @@
                 </div>
             </div>
         </div>
-        <div class="center">
+        <div class="lng-myworks">
             <div>
-            <span class="small-text top-indent-text title line">
-                С моими работами вы можете ознакомиться, нажав на кнопку ниже!
-            </span>
-            <button onclick="window.location.href = 'works.html'">Мои работы</button>
+                <span class="small-text top-indent-text title line">
+                    С моими работами вы можете ознакомиться, нажав на кнопку ниже!
+                </span>
+                <button onclick="window.location.href = 'works.html'">Мои работы</button>
             </div>
         </div>
     </body>
