--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
             </div>
             <div class="block2 big-margin-left">
                 <img class="avatarVK" src="img/avatarVK.jpg">
-                <span class="nick">Никита</span>
+                <span class="lng-nick">Никита</span>
                 <div class="text">VK</div>
                 <button onclick="window.open('https://vk.com/senpaall')">
                     <i class="fa-brands fa-vk"></i>
