--- a/index.html
+++ b/index.html
@@ -20,32 +20,35 @@
         <a rel="stylesheet" href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
     </div>
     <div class="main">
-        <h1>
+        <h1 class="lng-hello">
             <img style="height: 36px; width: 36px;" src="https://em-content.zobj.net/source/noto-emoji-animations/344/waving-hand_1f44b.gif">
             Привет!
             <img style="height: 36px; width: 36px;" src="https://em-content.zobj.net/source/noto-emoji-animations/344/waving-hand_1f44b.gif">
         </h1>
-        <h2>Добро пожаловать в мой блог!</h2>
+        <h2 class="lng-welcome">Добро пожаловать в мой блог!</h2>
         <hd></hd>
-        <h1>Что тут можно увидеть?</h1>
+        <h1 class="lng-see">Что тут можно увидеть?</h1>
         <div class="grid">
-            <div class="grid-item-1">
-                Мои учения
-            <p>Я читал учебник и делал упражнения, чтобы добиться такого</p></div>
-            <div class="grid-item-2">Мои развития
-                <p>Я обретал всё больше и больше знаний, учась на ошибках</p>
+            <div class="lng-grid-item-1">Мои учения
+            <p class="lng-info1">Я читал учебник и делал упражнения, чтобы добиться такого</p></div>
+            <div class="lng-grid-item-2">Мои развития
+                <p class="lng-info2">Я обретал всё больше и больше знаний, учась на ошибках</p>
             </div>
-            <div class="grid-item-3">Мои попытки
-                <p>Не всё было гладко, но я старался и не терял мотивацию</p>
+            <div class="lng-grid-item-3">Мои попытки
+                <p class="lng-info3">Не всё было гладко, но я старался и не терял мотивацию</p>
             </div>
-            <div class="grid-item-4">Мои успехи
-                <p>С помощью моих знаний и умений, я смог сделать этот сайт, и это не всё</p>
+            <div class="lng-grid-item-4">Мои успехи
+                <p class="lng-info4">С помощью моих знаний и умений, я смог сделать этот сайт, и это не всё</p>
             </div>
         </div>
         <hd></hd>
-        <h1>Что ещё?</h1>
-        <h2>У меня есть портфолио, в котором ты можешь ознакомиться с моими работами.</h2>
-        <button onclick="window.location.href = 'aboutme.html'">Портфолио</button>
+        <h1 class="lng-forth">Что ещё?</h1>
+        <h2 class="lng-endtext">У меня есть портфолио, в котором ты можешь ознакомиться с моими работами.</h2>
+        <button onclick="window.location.href = 'aboutme.html'" class="buttonPortfolio">Портфолио</button>
+        <select class="options">
+            <option value="ru" selected>RU</option>
+            <option value="en">EN</option>
+        </select>
     </div>
 </body>
 </html>
