--- a/works.html
+++ b/works.html
@@ -16,7 +16,7 @@
       <a class="panelWorks" href="works.html">My works</a>
       <a rel="stylesheet" href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
     </div>
-    <div class="content">
+    <div class="lng-content">
       <div class="text-center headline">Мои работы</div>
       <div class="site">
         <div class="site__img">
