--- a/works.html
+++ b/works.html
@@ -15,24 +15,30 @@
       <a class="panelAboutme" href="aboutme.html">About me</a>
       <a class="panelWorks" href="works.html">My works</a>
       <a rel="stylesheet" href="contacts.html" class="contact"> <i class="fa-solid fa-question"></i> </a>
+      <select class="options">
+          <option value="ru" selected>RU</option>
+          <option value="en">EN</option>
+      </select>
     </div>
-    <div class="lng-content">
-      <div class="text-center headline">Мои работы</div>
+    <div class="content">
+      <div class="lng-textMyworks headline">Мои работы</div>
       <div class="site">
         <div class="site__img">
           <img src="img/Blog.jpg" />
         </div>
         <div class="site__text">
-          <div class="site__headline">Блог</div>
-          <p>
+          <div class="lng-site__headline">Блог</div>
+          <p class="lng-infoBlog">
             Веб-сайт блог на ПК. Прост в использовании, присутствуют настройки фона.
             Есть ссылки на книги для языков программирования.
           </p>
-          <a href="css.html">Посетить сайт</a>
+          <a href="css.html" class="lng-linksite">Посетить сайт</a>
         </div>
       </div>
       <div class="site">
       </div>
     </div>
+    <script src="js/lng.js"></script>
+    <script src="js/translate.js"></script>
   </body>
 </html>
