--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="HTML,CSS,JavaScript,Портфолио">
     <meta name="author" content="Никита Абрамовский">
     <title>Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index.css">
     <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
 </head>
@@ -23,32 +25,63 @@
             <option value="en">EN</option>
         </select>
     </div>
+    <div class="container">
+    <nav class="navbar navbar-expand-md navbar-dark">
+            <span class="navbar-brand">Portfolio</span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutme.html">About me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="works.html">My works</a>
+                </li>
+                <li class="nav-item">
+                <select class="options mt-2">
+                    <option value="ru" selected>RU</option>
+                    <option value="en">EN</option>
+                </select>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    </div>
     <div class="main">
-        <h1 class="lng-hello">
-            <img style="height: 36px; width: 36px;" src="https://em-content.zobj.net/source/noto-emoji-animations/344/waving-hand_1f44b.gif">
-            Привет!
-            <img style="height: 36px; width: 36px;" src="https://em-content.zobj.net/source/noto-emoji-animations/344/waving-hand_1f44b.gif">
-        </h1>
-        <h2 class="lng-welcome">Добро пожаловать в мой блог!</h2>
-        <hd></hd>
+        <h1 class="lng-hello">Привет!</h1>
+        <h2 class="lng-welcome px-3 text-center my-2">Добро пожаловать в мой блог!</h2>
+        <hd class="my-3"></hd>
         <h1 class="lng-see">Что тут можно увидеть?</h1>
-        <div class="grid">
-            <div class="grid-item-1"><span class="lng-grid-1">Мои учения</span>
-                <p class="lng-info-1">Я читал учебник и делал упражнения, чтобы добиться такого</p>
-            </div>
-            <div class="grid-item-2"><span class="lng-grid-2">Мои развития</span>
-                <p class="lng-info-2">Я обретал всё больше и больше знаний, учась на ошибках</p>
-            </div>
-            <div class="grid-item-3"><span class="lng-grid-3">Мои попытки</span>
-                <p class="lng-info-3">Не всё было гладко, но я старался и не терял мотивацию</p>
-            </div>
-            <div class="grid-item-4"><span class="lng-grid-4">Мои успехи</span>
-                <p class="lng-info-4">С помощью моих знаний и умений, я смог сделать этот сайт, и это не всё</p>
+        <div class="grid container">
+            <div class="row align-items-center justify-content-center mt-4">
+                <div class="grid-item-1 col-sm-12 col-xxl-6 mb-2">
+                    <span class="lng-grid-1">Мои учения</span>
+                    <p class="lng-info-1">Я читал учебник и делал упражнения, чтобы добиться такого</p>
+                </div>
+                <div class="grid-item-2 col-sm-12 col-xxl-6 mb-2 py-4">
+                    <span class="lng-grid-2">Мои развития</span>
+                    <p class="lng-info-2">Я обретал всё больше и больше знаний, учась на ошибках</p>
+                </div>
+                </div>
+                <div class="row align-items-center justify-content-center custom_row">
+                <div class="grid-item-3 col-sm-12 col-xxl-6 mb-2 py-4">
+                    <span class="lng-grid-3">Мои попытки</span>
+                    <p class="lng-info-3">Не всё было гладко, но я старался и не терял мотивацию</p>
+                </div>
+                <div class="grid-item-4 col-sm-12 col-xxl-6 mb-2 py-4">
+                    <span class="lng-grid-4">Мои успехи</span>
+                    <p class="lng-info-4">С помощью моих знаний и умений, я смог сделать этот сайт, и это не всё</p>
+                </div>
             </div>
         </div>
-        <hd></hd>
-        <h1 class="lng-forth">Что ещё?</h1>
-        <h2 class="lng-endtext">У меня есть портфолио, в котором ты можешь ознакомиться с моими работами.</h2>
+        <hd class="mb-3"></hd>
+        <h1 class="lng-forth my-3">Что ещё?</h1>
+        <h2 class="lng-endtext text-center mb-3">У меня есть портфолио, в котором ты можешь ознакомиться с моими работами.</h2>
         <button onclick="window.location.href = 'aboutme.html'" class="lng-buttonPortfolio">Портфолио</button>
     </div>
     <script src="js/lng.js"></script>
