fix translate on phone

--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
         <a class="panelAboutme" href="aboutme.html">About me</a>
         <a class="panelWorks" href="works.html">My works</a>
         <a class="panelContacts" href="contacts.html">My contacts</a>
-        <select class="optionsLangG">
+        <select class="optionsLang">
             <option value="ru" selected>RU</option>
             <option value="en">EN</option>
         </select>
+        <!-- <div class="d-flex flex-column">
+            <button class="Theme mb-2" onclick="lightTheme()"><i class="fa-solid fa-sun"></i></button>
+            <button class="Theme"onclick="darkTheme()"><i class="fa-solid fa-moon"></i></button>
+        </div> -->
     </div>
     <div class="container">
         <nav class="navbar navbar-expand-md navbar-dark">
@@ -46,10 +50,10 @@
                         <a class="nav-link" href="none">My contacts *в разработке*</a>
                     </li>
                     <li class="nav-item">
-                    <select class="optionsLangG mt-2">
-                        <option value="ru" selected>RU</option>
-                        <option value="en">EN</option>
-                    </select>
+                        <select class="optionsLangMobile mt-2">
+                            <option value="ru" selected>RU</option>
+                            <option value="en">EN</option>
+                        </select>
                     </li>
                 </ul>
             </div>
@@ -89,5 +93,6 @@
     </div>
     <script src="js/lng.js"></script>
     <script src="js/translate.js"></script>
+    <!-- <script src="js/theme.js"></script> -->
 </body>
 </html>
