--- a/works.html
+++ b/works.html
@@ -17,7 +17,7 @@
       <a class="panelAboutme" href="aboutme.html">About me</a>
       <a class="panelWorks" href="works.html">My works</a>
       <a class="panelContacts" href="contacts.html">My contacts</a>
-      <select class="optionsLangG">
+      <select class="optionsLang">
           <option value="ru" selected>RU</option>
           <option value="en">EN</option>
       </select>
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="none">My contacts *в разработке*</a>
               </li>
               <li class="nav-item">
-                <select class="optionsLangG mt-2">
+                <select class="optionsLangMobile mt-2">
                   <option value="ru" selected>RU</option>
                   <option value="en">EN</option>
                 </select>
