update panel on phone

--- a/index.html
+++ b/index.html
@@ -47,8 +47,19 @@
                         <a class="nav-link" href="works.html">My works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="none">My contacts *в разработке*</a>
+                        <span style="cursor: default" class="nav-text" href="contacts.html">-- My contacts: --</span>
                     </li>
+                    <ul>
+                        <li>
+                            <a class="nav-link" href="https://discordapp.com/users/328901168447225867" target="_blank">> Discord</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="https://vk.com/senpaall" target="_blank">> VK</a>
+                        </li>
+                        <li>
+                            <a class="nav-link" href="https://github.com/senpaal" target="_blank">> GitHub</a>
+                        </li>
+                    </ul>
                     <li class="nav-item">
                         <select class="optionsLangMobile mt-2">
                             <option value="ru" selected>RU</option>
