--- a/works.html
+++ b/works.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My works</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/works.css">
     <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
   </head>
@@ -40,8 +40,19 @@
                 <a class="nav-link linkworks" href="works.html">My works</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="none">My contacts *в разработке*</a>
+                <span style="cursor: default" class="nav-text" href="contacts.html">-- My contacts: --</span>
               </li>
+              <ul>
+                  <li>
+                      <a class="nav-link" href="https://discordapp.com/users/328901168447225867" target="_blank">> Discord</a>
+                  </li>
+                  <li>
+                      <a class="nav-link" href="https://vk.com/senpaall" target="_blank">> VK</a>
+                  </li>
+                  <li>
+                      <a class="nav-link" href="https://github.com/senpaal" target="_blank">> GitHub</a>
+                  </li>
+              </ul>
               <li class="nav-item">
                 <select class="optionsLangMobile mt-2">
                   <option value="ru" selected>RU</option>
