add Login site and fix works.html code

--- a/works.html
+++ b/works.html
@@ -78,6 +78,19 @@
           <a href="css.html" class="lng-linksite">Посетить сайт</a>
         </div>
       </div>
+      <div class="site">
+        <div class="site__img">
+          <img src="img/LogReg.jpg">
+        </div>
+        <div class="site__text">
+          <div class="lng-site__headline">Аунтефикация</div>
+          <p class="lng-infoBlog">
+            Веб-сайт аунтефикации на ПК. Сайт где ты можешь зарегестрировать свой 
+            аккаунт и войти в него. Красиывй дизайн и прост в использовании.
+          </p>
+          <a href="reg.html" class="lng-linksite">Посетить сайт</a>
+        </div>
+      </div>
     <script src="js/lng.js"></script>
     <script src="js/translate.js"></script>
   </body>
