--- a/works.html
+++ b/works.html
@@ -67,7 +67,7 @@
       <div class="lng-textMyworks headline">Мои работы</div>
       <div class="site">
         <div class="site__img">
-          <img src="img/Blog.jpg" />
+          <img src="img/bloge.jpg" />
         </div>
         <div class="site__text">
           <div class="lng-site__headline">Блог</div>
