--- a/works.html
+++ b/works.html
@@ -12,16 +12,17 @@
   </head>
   <body>
     <div class="panel">
-      <h1 class="titleMe">Portfolio</h1>
-      <a class="panelHome" href="/">Home</a>
+      <a class="titleMe" href="/">Portfolio</a>
+      <!-- <a class="panelHome" href="/">Home</a> -->
       <a class="panelAboutme" href="aboutme.html">About me</a>
       <a class="panelWorks" href="works.html">My works</a>
       <a class="panelContacts" href="contacts.html">My contacts</a>
+      <a class="panelLogin" href="reg.html">Log In</a>
       <select class="optionsLang">
           <option value="ru" selected>RU</option>
           <option value="en">EN</option>
       </select>
-    </div>
+  </div>
     <div class="container">
       <nav class="navbar navbar-expand-md navbar-dark">
         <span class="navbar-brand">Portfolio</span>
