--- a/contacts.html
+++ b/contacts.html
@@ -13,11 +13,12 @@
 </head>
 <body>
     <div class="panel">
-        <h1 class="titleMe">Portfolio</h1>
-        <a class="panelHome" href="/">Home</a>
+        <a class="titleMe" href="/">Portfolio</a>
+        <!-- <a class="panelHome" href="/">Home</a> -->
         <a class="panelAboutme" href="aboutme.html">About me</a>
         <a class="panelWorks" href="works.html">My works</a>
         <a class="panelContacts" href="contacts.html">My contacts</a>
+        <a class="panelLogin" href="reg.html">Log In</a>
     </div>
     <div class="idk2">
         <div class="idk">
