--- a/reg.html
+++ b/reg.html
@@ -10,8 +10,20 @@
     <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div class="panel">
+        <a class="titleMe" href="/">Portfolio</a>
+        <!-- <a class="panelHome" href="/">Home</a> -->
+        <a class="panelAboutme" href="aboutme.html">About me</a>
+        <a class="panelWorks" href="works.html">My works</a>
+        <a class="panelContacts" href="contacts.html">My contacts</a>
+        <a class="panelLogin" href="reg.html">Log In</a>
+        <!-- <div class="d-flex flex-column">
+            <button class="Theme mb-2" onclick="lightTheme()"><i class="fa-solid fa-sun"></i></button>
+            <button class="Theme"onclick="darkTheme()"><i class="fa-solid fa-moon"></i></button>
+        </div> -->
+    </div>
     <biv class="all">
-        <div class="panel panel1"> <!-- Log in -->
+        <div class="box box1"> <!-- Log in -->
             <div class="objects">
                 <div class="objImg">
                     <img class="img" src="img/black.jpg"></img>
@@ -65,7 +77,7 @@
             </div>
         </div>
 
-        <div class="panel panel2"> <!-- Register -->
+        <div class="box box2"> <!-- Register -->
             <div class="objects">
                 <div class="objImg">
                     <img class="img" src="img/black.jpg"></img>
