--- a/works.html
+++ b/works.html
@@ -66,28 +66,28 @@
     </div>
     <div class="content">
       <div class="lng-textMyworks headline">Мои работы</div>
-      <div class="site">
+      <!-- <div class="site">
         <div class="site__img">
           <img src="img/bloge.jpg" />
         </div>
         <div class="site__text">
           <div class="lng-site__headline">Блог</div>
-          <p class="lng-infoBlog">
+          <p class="lng-infoBlog info">
             Веб-сайт блог на ПК. Прост в использовании, присутствуют настройки фона.
             Есть ссылки на книги для языков программирования.
           </p>
           <a href="css.html" class="lng-linksite">Посетить сайт</a>
         </div>
-      </div>
+      </div> -->
       <div class="site">
         <div class="site__img">
           <img src="img/LogReg.jpg">
         </div>
         <div class="site__text">
-          <div class="lng-site__headline">Аунтефикация</div>
-          <p class="lng-infoBlog">
+          <div class="lng-site__headlineLogin">Аунтефикация</div>
+          <p class="lng-infoLogin info">
             Веб-сайт аунтефикации на ПК. Сайт где ты можешь зарегестрировать свой 
-            аккаунт и войти в него. Красиывй дизайн и прост в использовании.
+            аккаунт и войти в него. Красивый дизайн и прост в использовании.
           </p>
           <a href="reg.html" class="lng-linksite">Посетить сайт</a>
         </div>
