--- a/works.html
+++ b/works.html
@@ -84,9 +84,9 @@
           <img src="img/LogReg.jpg">
         </div>
         <div class="site__text">
-          <div class="lng-site__headlineLogin">Аунтефикация</div>
+          <div class="lng-site__headlineLogin">Аутентификация</div>
           <p class="lng-infoLogin info">
-            Веб-сайт аунтефикации на ПК. Сайт где ты можешь зарегестрировать свой 
+            Веб-сайт аутентификации на ПК. Сайт где ты можешь зарегестрировать свой 
             аккаунт и войти в него. Красивый дизайн и прост в использовании.
           </p>
           <a href="reg.html" class="lng-linksite">Посетить сайт</a>
