--- a/reg.html
+++ b/reg.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/3dd0ab1e58.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <svg class="svg1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#8c00f0" fill-opacity="1" d="M0,224L24,186.7C48,149,96,75,144,58.7C192,43,240,85,288,96C336,107,384,85,432,101.3C480,117,528,171,576,176C624,181,672,139,720,122.7C768,107,816,117,864,128C912,139,960,149,1008,149.3C1056,149,1104,139,1152,144C1200,149,1248,171,1296,192C1344,213,1392,235,1416,245.3L1440,256L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z"></path></svg>
     <div class="panel">
         <a class="titleMe" href="/">Portfolio</a>
         <!-- <a class="panelHome" href="/">Home</a> -->
@@ -22,7 +23,7 @@
             <button class="Theme"onclick="darkTheme()"><i class="fa-solid fa-moon"></i></button>
         </div> -->
     </div>
-    <biv class="all">
+    <div class="all">
         <div class="box box1"> <!-- Log in -->
             <div class="objects">
                 <div class="objImg">
@@ -47,15 +48,17 @@
             <!--nick -->
                 <div class="PanelLogin" data-validate="Enter username">
                     <i class="fa-solid fa-house icon iconHouse"></i>
+                    <!-- <p class="dop-elem">|</p> -->
                     <input class="username" type="text" autocomplete="off" name="username" placeholder=" Username">
                 </div>
             <!-- pass -->
                 <div class="PanelPass" data-validate="Enter password">
                     <i class="fa-solid fa-key icon iconKey"></i>
+                    <!-- <p class="dop-elem">|</p> -->
                     <input class="password" type="password" autocomplete="off" name="pass" placeholder=" Password">
                 </div>
 
-                <div class="button">
+                <div class="button bt1">
                     <button>Log in</button>
                 </div>
 
@@ -101,25 +104,32 @@
             <!-- nick -->
                 <div class="PanelLogin" data-validate="Enter username">
                     <i class="fa-solid fa-house icon iconHouse"></i>
+                    <!-- <p class="dop-elem">|</p> -->
                     <input class="username" type="text" autocomplete="off" name="username" placeholder=" Username">
                 </div>
             <!-- pass -->
                 <div class="PanelPass" data-validate="Enter password">
                     <i class="fa-solid fa-key icon iconKey"></i>
+                    <!-- <p class="dop-elem">|</p> -->
                     <input class="password" type="password" autocomplete="off" name="pass" placeholder=" Password">
                 </div>
             <!-- repeat pass -->
                 <div class="PanelPass" data-validate="Enter password">
                     <i class="fa-solid fa-key icon iconKey"></i>
+                    <!-- <p class="dop-elem">|</p> -->
                     <input class="password" type="password" autocomplete="off" name="pass" placeholder=" Repeat password">
                 </div>
-
-                <div class="button">
+                
+                <div class="button bt2">
                     <button>Register</button>
                 </div>
             </div>
         </div>
+        <!-- <div>
+            <svg class="svg1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#8c00f0" fill-opacity="1" d="M0,192L48,202.7C96,213,192,235,288,245.3C384,256,480,256,576,261.3C672,267,768,277,864,256C960,235,1056,181,1152,165.3C1248,149,1344,171,1392,181.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+        </div> -->
     </div>
+    <!-- <svg class="svg1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#8c00f0" fill-opacity="1" d="M0,192L48,202.7C96,213,192,235,288,245.3C384,256,480,256,576,261.3C672,267,768,277,864,256C960,235,1056,181,1152,165.3C1248,149,1344,171,1392,181.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg> -->
 </body>
 </html>
 
