--- a/contacts.html
+++ b/contacts.html
@@ -23,7 +23,7 @@
     <div class="idk2">
         <div class="idk">
             <div class="block">
-                <img class="avatar" src="https://cdn.discordapp.com/avatars/328901168447225867/73a3942a89628fcb104523f4cb3228b3.webp?size=128">
+                <img class="avatar" src="https://cdn.discordapp.com/avatars/328901168447225867/a_1dbff70a79e2e7f44eaeccdf32ff1d3d.gif?size=128">
                 <span class="nick">senpaal</span>
                 <div class="text">Discord</div>
                     <button onclick="window.open('https://discordapp.com/users/328901168447225867')">
