--- a/contacts.html
+++ b/contacts.html
@@ -36,7 +36,7 @@
                     </button>
             </div>
             <div class="block2 big-margin-left">
-                <img class="avatarVK" src="img/avatarVK.jpg">
+                <img class="avatarVK" src="https://sun1-99.userapi.com/s/v1/if2/CjZcSHPpjO0pLq0glc8LaEuJEK4ffZRxl1gSftYxmQyALxyFMsnQGwHRC4URhMBy7EjxJbd1kGWzdt1yu3d41toi.jpg?quality=95&crop=123,259,710,710&as=50x50,100x100,200x200,400x400&ava=1&u=L7qLbyPRKTjyKVccJp2XnfW3JGuUJpELd2H2W2fXF6I&cs=200x200">
                 <span class="lng-nick">Никита</span>
                 <div class="text">VK</div>
                 <button onclick="window.open('https://vk.com/senpaall')">
